--- a/src/app/account-info/account-info.component.css
+++ b/src/app/account-info/account-info.component.css
@@ -23,8 +23,10 @@ b {
   font-weight: 700;
 }
 
-img {
+.img-profile {
   width: 13.5rem;
   height: 13.5rem;
   flex-shrink: 0;
+  cursor: pointer;
+  border-radius: 50%;
 }
