--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -86,7 +86,7 @@
         <main class="content px-3 py-2">
             <div class="container-fluid">
                 <div class="mb-3">
-                    <app-my-team></app-my-team>
+                    <app-my-team [teamExist]="false"></app-my-team>
                 </div>
             </div>
         </main>
