--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -145,7 +145,9 @@
           id="changePassword"
           type="button"
           class="btn btn-success"
+          data-bs-toggle="modal"
           [hidden]="!showChangePasswordButton"
+          data-bs-target="#passwordModal"
           (click)="onChangePassword()"
         >
           Change Password
@@ -179,11 +181,6 @@
         </button>
       </div>
     </section>
-  </div>
-
-  <div id="btnWrapper">
-    <button type="button" class="btn btn-success">Show Requests</button>
-    <button type="button" class="btn btn-success" data-bs-toggle="modal" data-bs-target="#passwordModal">Change Password</button>
   </div>
 </form>
 
