--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -1,45 +1,97 @@
 <div class="container" *ngIf="params.showFirst">
-    <h1>Sign Up</h1>
-    <form #signUpForm="ngForm" (ngSubmit)="nextForm()">
-      <!--Email box-->
-      <div id="boxWrapper1">
-          <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">First Name</label>
-              <input name="firstName" [(ngModel)]="params.firstName" type="text" class="form-control" id="exampleFormControlInput1" placeholder="First" >
-          </div>
-          <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Last Name</label>
-              <input name="lastName" [(ngModel)]="params.lastName" type="text" class="form-control" id="exampleFormControlInput1" placeholder="Last" >
-          </div>
-          <div class="mb-3">
-              <label for="exampleFormControlInput1" class="form-label">Account Type</label>
-              <div class="dropdown">
-                  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-bs-toggle='dropdown' aria-haspopup="true" aria-expanded="false">
-                    Student
-                  </button>
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                    <a class="dropdown-item" (click)="changeAccountType('Student')">Student</a>
-                    <a class="dropdown-item" (click)="changeAccountType('Mentor')">Mentor</a>
-                  </div>
-              </div>
-          </div>
+  <h1>Sign Up</h1>
+  <form #signUpForm="ngForm" (ngSubmit)="nextForm()">
+    <!--Email box-->
+    <div id="boxWrapper1">
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label"
+          >First Name</label
+        >
+        <input
+          name="firstName"
+          [(ngModel)]="params.firstName"
+          type="text"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="First"
+        />
       </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label"
+          >Last Name</label
+        >
+        <input
+          name="lastName"
+          [(ngModel)]="params.lastName"
+          type="text"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="Last"
+        />
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label"
+          >Account Type</label
+        >
+        <div class="dropdown">
+          <button
+            class="btn btn-secondary dropdown-toggle"
+            type="button"
+            id="dropdownMenuButton"
+            data-bs-toggle="dropdown"
+            aria-haspopup="true"
+            aria-expanded="false"
+          >
+            Student
+          </button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" (click)="changeAccountType('Student')"
+              >Student</a
+            >
+            <a class="dropdown-item" (click)="changeAccountType('Mentor')"
+              >Mentor</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
 
-      <div id="boxWrapper2">
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">KFUPM Email</label>
-          <input name="email" [(ngModel)]="params.email" type="email" class="form-control" id="exampleFormControlInput1" placeholder="s2020XXXXX@kfupm.edu.sa">
-        </div>
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Phone Number</label>
-          <input name="phoneNumber" [(ngModel)]="params.phoneNumber" type="tel" class="form-control" id="exampleFormControlInput1" placeholder="05XXXXXXXX">
-        </div>
+    <div id="boxWrapper2">
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label"
+          >KFUPM Email</label
+        >
+        <input
+          name="email"
+          [(ngModel)]="params.email"
+          type="email"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="s2020XXXXX@kfupm.edu.sa"
+        />
       </div>
-      <div id="btnWrapper">
-        <button type="submit" class="btn btn-success">Next</button>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label"
+          >Phone Number</label
+        >
+        <input
+          name="phoneNumber"
+          [(ngModel)]="params.phoneNumber"
+          type="tel"
+          class="form-control"
+          id="exampleFormControlInput1"
+          placeholder="05XXXXXXXX"
+        />
       </div>
-    </form>
-  </div>
+    </div>
+    <div id="btnWrapper">
+      <button type="submit" class="btn btn-success">Next</button>
+    </div>
+  </form>
+</div>
 <!--Signup submit form-->
-<app-signup-submit [showFirstToggle]="params.showFirst" *ngIf="!params.showFirst" (updateView)="updateView($event)"></app-signup-submit>
-
+<app-signup-submit
+  [showFirstToggle]="params.showFirst"
+  *ngIf="!params.showFirst"
+  (updateView)="updateView($event)"
+></app-signup-submit>
