--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -7,25 +7,21 @@ h2 {
   font-weight: 722;
   line-height: normal;
 }
-
+ 
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
-
+ 
 .wrapper {
   display: flex;
-  height: fit-content;
-
+  height: 44rem;
+  flex-direction: column;
   justify-content: space-around;
 }
-
-/* input {
-  width: 500px;
-} */
-
+ 
 /* For buttons */
 #boxWrapper {
   display: flex;
@@ -33,16 +29,16 @@ h2 {
   justify-content: center;
   align-items: center;
 }
-
+ 
 .btn-success {
   border-radius: 50px;
   /* background-color: #198754; */
-
+ 
   padding: 0.625rem 0.625rem;
-
+ 
   width: 13.6875rem;
-  height: 3.125rem;
-
+  height: 4.125rem;
+ 
   color: #dde6ed;
   font-family: Inter;
   font-size: 1.5rem;
@@ -50,7 +46,7 @@ h2 {
   font-weight: 722;
   line-height: normal;
 }
-
+ 
 #btnWrapper {
   display: flex;
   flex-direction: row;
@@ -62,26 +58,26 @@ h2 {
   gap: 0.625rem;
   flex-shrink: 0;
 }
-
+ 
 /* End of buttons */
-
+ 
 .imageRow {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
-
+ 
 .forgotPass {
   float: left;
 }
-
+ 
 .personal-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding: 1rem;
 }
-
+ 
 .field-wrapper {
   display: flex;
   position: relative;
@@ -89,55 +85,55 @@ h2 {
   gap: 4px;
   width: fit-content;
 }
-
+ 
+.field-wrapper-horizintal {
+  display: flex;
+  position: relative;
+  gap: 4px;
+  width: 55.7rem;
+  justify-content: space-around;
+}
+ 
 .form-control {
-  width: 25.8125rem;
+  width: 18.75rem;
   height: 3.625rem;
   margin-top: 1.5rem;
   padding: 10px;
+  padding-left: 30px;
   flex-shrink: 0;
   fill: #dde6ed;
   border-radius: 50px;
   border: 0 solid white;
-  color: #0f7553;
+  color: #212529;
   font-family: Inter;
   font-size: 2rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
 }
-
-select {
-  width: 14.25rem;
-  height: 3.625rem;
-  flex-shrink: 0;
-  margin-top: 1.5rem;
-  padding-left: 4.2rem;
-  flex-shrink: 0;
-  fill: #dde6ed;
-  border-radius: 40px;
-  border: 0 solid white;
-  color: #0f7553;
-  font-family: Inter;
-  font-size: 2rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
+ 
+.contact {
+  width: 26.8rem;
 }
-
+ 
+#major {
+  width: 13.25rem;
+}
+ 
 .form-label {
   position: absolute;
-  width: 8.9375rem;
+  /* width: 8.9375rem; */
+  width: fit-content;
   height: 1.625rem;
   left: 2rem;
-  color: #dde6ed;
+  color: #212529;
   font-family: Inter;
   font-size: 1.25rem;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
 }
-
+ 
 .img {
   position: absolute;
   height: 2rem;
@@ -145,21 +141,8 @@ select {
   bottom: 0.8rem;
   cursor: pointer;
 }
-
-.select-label {
-  position: absolute;
-  width: 8.9375rem;
-  height: 1.625rem;
-  left: 2rem;
-  color: #dde6ed;
-  font-family: Inter;
-  font-size: 1.25rem;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
-}
-
-.textarea-interest {
+ 
+.textarea {
   width: 25.8125rem;
   margin-top: 1.5rem;
   padding: 10px;
@@ -167,26 +150,7 @@ select {
   fill: #dde6ed;
   border-radius: 50px;
   border: 0 solid white;
-  color: #0f7553;
-  font-family: Inter;
-  font-size: 2rem;
-  font-style: normal;
-  font-weight: 500;
-  line-height: normal;
-  resize: none;
-}
-
-.textarea-bio {
-  width: 52.125rem;
-  height: 12rem;
-  flex-shrink: 0;
-  margin-top: 1.5rem;
-  padding: 20px;
-  flex-shrink: 0;
-  fill: #dde6ed;
-  border-radius: 50px;
-  border: 0 solid white;
-  color: #0f7553;
+  color: #212529;
   font-family: Inter;
   font-size: 1.25rem;
   font-style: normal;
@@ -194,3 +158,65 @@ select {
   line-height: normal;
   resize: none;
 }
+ 
+.modal-content {
+  background-color: #9fa2a8;
+}
+ 
+.modal-input {
+  margin: 0;
+  background: #dde6ed;
+}
+ 
+.input-label {
+  margin: 0;
+}
+ 
+#modal-title {
+  color: #0f7553;
+  text-align: center;
+  font-family: Inter;
+  font-size: 38px;
+  font-style: normal;
+  font-weight: 722;
+  line-height: normal;
+}
+ 
+.fa-eye,
+.fa-eye-slash {
+  scale: 1.5;
+  color: #38a3d7;
+  position: absolute;
+  transform: translateY(80%);
+  cursor: pointer;
+  right: 128px;
+}
+ 
+#modal-button {
+  width: 170px;
+}
+ 
+.rounded-circle {
+  height: 32px;
+  width: 32px;
+  background-color: #198754;
+  cursor: pointer;
+}
+ 
+.about {
+  height: 18.3rem;
+}
+ 
+.skills {
+  height: 13rem;
+}
+ 
+.links {
+  width: 54rem;
+}
+ 
+.gray {
+  background-color: #212529;
+  border: #212529;
+}
+ 
